--- a/sample/Makefile
+++ b/sample/Makefile
@@ -41,7 +41,7 @@ LIBS	:= \
 # include and lib
 #---------------------------------------------------------------------------------
 LIBDIRS	:= \
-    ../thirdparty/sdl/SDL/lib \
+	../sdl/SDL/lib \
 	../
 
 #---------------------------------------------------------------------------------
